ADM-443 delete DeploymentFrequencyModel data class and relevant logic